force-app/main/default/objects/Opportunity__c/fields/Challenge__c.field-meta.xml
<CustomField>
    <fullName>Challenge__c</fullName>
    <label>Challenge</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>