force-app/main/default/objects/Opportunity__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Commodity__c.Prohibited__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipName>Opporturnities</relationshipName>
    <type>Lookup</type>
</CustomField>