force-app/main/default/objects/Opportunity__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>