force-app/main/default/objects/Opportunity__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Customer)</relationshipLabel>
    <relationshipName>Opporturnities</relationshipName>
    <type>Lookup</type>
</CustomField>