force-app/main/default/objects/Opportunity__c/fields/Latepaymentfee__c.field-meta.xml
<CustomField>
    <fullName>Latepaymentfee__c</fullName>
    <label>Late payment fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>