force-app/main/default/objects/Opportunity__c/fields/NEXT_ACTION_SUPPORT__c.field-meta.xml
<CustomField>
    <fullName>NEXT_ACTION_SUPPORT__c</fullName>
    <label>NEXT ACTION/ SUPPORT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>