force-app/main/default/objects/Opportunity__c/fields/Paymentterm__c.field-meta.xml
<CustomField>
    <fullName>Paymentterm__c</fullName>
    <label>Payment term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>