force-app/main/default/objects/Opportunity__c/fields/Place_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Delivery</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Opportunities (Place of Delivery)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>