force-app/main/default/objects/Opportunity__c/fields/Place_of_Delivery_fomula__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Delivery_fomula__c</fullName>
    <formula>Place_of_Delivery__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Delivery</label>
    <type>Text</type>
</CustomField>