force-app/main/default/objects/Opportunity__c/fields/Place_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Place of Receipt</label>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>