force-app/main/default/objects/Opportunity__c/fields/Place_of_Receipt_fomula__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Receipt_fomula__c</fullName>
    <formula>Place_of_Receipt__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Receipt</label>
    <type>Text</type>
</CustomField>