force-app/main/default/objects/Opportunity__c/fields/POD_AOD__c.field-meta.xml
<CustomField>
    <fullName>POD_AOD__c</fullName>
    <formula>Route__r.To__r.Name</formula>
    <label>P.O.D (A.O.D)</label>
    <type>Text</type>
</CustomField>