force-app/main/default/objects/Opportunity__c/fields/POL_AOL__c.field-meta.xml
<CustomField>
    <fullName>POL_AOL__c</fullName>
    <formula>Route__r.From__r.Name</formula>
    <label>P.O.L (A.O.L)</label>
    <type>Text</type>
</CustomField>