force-app/main/default/objects/Opportunity__c/fields/Prefer_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Prefer_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prefer Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opporturnities1</relationshipName>
    <type>Lookup</type>
</CustomField>