force-app/main/default/objects/Opportunity__c/fields/Route_Name_fomula__c.field-meta.xml
<CustomField>
    <fullName>Route_Name_fomula__c</fullName>
    <formula>Route__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>