force-app/main/default/objects/Opportunity__c/fields/Shipment_Term__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Term__c</fullName>
    <label>Shipment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shipment_Term</valueSetName>
    </valueSet>
</CustomField>