force-app/main/default/objects/Opportunity__c/fields/Transportation_Way__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Way__c</fullName>
    <label>Transportation Way</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Transportation_Way</valueSetName>
    </valueSet>
</CustomField>