force-app/main/default/objects/Opportunity__c/fields/VolumeTeus__c.field-meta.xml
<CustomField>
    <fullName>VolumeTeus__c</fullName>
    <label>Volume (Teus)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>