force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Commodity__c</columns>
    <columns>Route__c</columns>
    <columns>POL_AOL__c</columns>
    <columns>POD_AOD__c</columns>
    <columns>ServiceType__c</columns>
    <columns>Shipment_Term__c</columns>
    <columns>TypeofTrade__c</columns>
    <columns>Transportation_Way__c</columns>
    <columns>VolumeTeus__c</columns>
    <columns>Salesman__c</columns>
    <columns>Prefer_Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesman__c</field>
        <operation>contains</operation>
        <value>Thao</value>
    </filters>
    <label>All</label>
</ListView>